--- a/Sprint2/public/css/styles.css
+++ b/Sprint2/public/css/styles.css
@@ -1,2 +1,8 @@
+@import url(header.css);
+@import url(footer.css);
 @import url(general.css);
 @import url(home.css);
+@import url(carrito.css);
+@import url(detalleDeProducto.css);
+@import url(login.css);
+@import url(registro.css);
