--- a/Sprint2/views/login.html
+++ b/Sprint2/views/login.html
@@ -85,7 +85,7 @@
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie.
+        <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie
 
         </div>
       </div>
