--- a/Sprint2/public/css/home.css
+++ b/Sprint2/public/css/home.css
@@ -48,7 +48,7 @@
     font-size: 16px;
     font-weight: 200;
     text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif
 
 }
 
