correccion home html

--- a/views/home.html
+++ b/views/home.html
@@ -103,7 +103,7 @@
         <section class="productos">
             <article class="producto">
                 <div class="imagen">
-                    <a href="/detalleDeProducto.html"><img class="rounded-circle" src="/images/mate1.jpeg" width="200px"> </a>
+                    <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/mate1.jpeg" width="200px"> </a>
                 </div>
                 <div class="resumen">
                     <h4 class="descripcion">mate de cuero golden</h4>
@@ -112,7 +112,7 @@
             </article>
             <article class="producto">
                 <div class="imagen">
-                    <a href="/detalleDeProducto.html"><img class="rounded-circle" src="/images/mate2.jpeg" width="200px"> </a>
+                    <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/mate2.jpeg" width="200px"> </a>
                 </div>
                 <div class="resumen">
                     <h4 class="descripcion">mate de cuero silver</h4>
@@ -121,7 +121,7 @@
             </article>
             <article class="producto">
                 <div class="imagen">
-                    <a href="/detalleDeProducto.html"><img class="rounded-circle" src="/images/mate3.jpeg" width="200px"> </a>
+                    <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/mate3.jpeg" width="200px"> </a>
                 </div>
                 <div class="resumen">
                     <h4 class="descripcion">mate style dashed</h4>
@@ -130,7 +130,7 @@
             </article>
             <article class="producto">
                 <div class="imagen">
-                    <a href="/detalleDeProducto.html"><img class="rounded-circle" src="/images/mate4.jpeg" width="200px"> </a>
+                    <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/mate4.jpeg" width="200px"> </a>
                 </div>
                 <div class="resumen">
                     <h4 class="descripcion">mate de acero black</h4>
@@ -139,7 +139,7 @@
             </article> 
             <article class="producto">
                 <div class="imagen">
-                    <a href="/detalleDeProducto.html"><img class="rounded-circle" src="/images/mate-blanco.png" width="200px"> </a>
+                    <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/mate-blanco.png" width="200px"> </a>
                 </div>
                 <div class="resumen">
                     <h4 class="descripcion">mate de acero white</h4>
@@ -148,7 +148,7 @@
             </article>
             <article class="producto">
                 <div class="imagen">
-                    <a href="/detalleDeProducto.html"><img class="rounded-circle" src="/images/mate-negro.png" width="200px"> </a>
+                    <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/mate-negro.png" width="200px"> </a>
                 </div>
                 <div class="resumen">
                     <h4 class="descripcion">mate de acero black</h4>
@@ -157,7 +157,7 @@
             </article>
             <article class="producto">
                 <div class="imagen">
-                    <a href="/detalleDeProducto.html"><img class="rounded-circle" src="/images/equipo1.jpeg" width="200px"> </a>
+                    <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/equipo1.jpeg" width="200px"> </a>
                 </div>
                 <div class="resumen">
                     <h4 class="descripcion">equipo matero green</h4>
@@ -166,7 +166,7 @@
             </article>
             <article class="producto">
                 <div class="imagen">
-                    <a href="/detalleDeProducto.html"><img class="rounded-circle" src="/images/equipo2.jpeg" width="200px"> </a>
+                    <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/equipo2.jpeg" width="200px"> </a>
                 </div>
                 <div class="resumen">
                     <h4 class="descripcion">equipo matero blue-dark</h4>
@@ -175,7 +175,7 @@
             </article>
             <article class="producto">
                 <div class="imagen">
-                    <a href="/detalleDeProducto.html"><img class="rounded-circle" src="/images/equipo3.jpeg" width="200px"> </a>
+                    <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/equipo3.jpeg" width="200px"> </a>
                 </div>
                 <div class="resumen">
                     <h4 class="descripcion">equipo matero full-cuero</h4>
