--- a/views/login.html
+++ b/views/login.html
@@ -15,54 +15,52 @@
 <body class="login">
   <header>
     <nav class="nav">
-      <ul class="navbar_responsive">
-        <li><a href="">tienda</a></li>
-        <li><a href="">contacto</a></li>
-        <li><a href="">nosotros</a></li>
-        <li><a href="">acerca de</a></li>
-      </ul>
-
-       <!-- burger menu--> 
-      <div class="burger">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-              aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">tienda</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">contacto</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">nosotros</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">acerca de</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
-      <div class="logo"><a href="/"><img src="/images/logo-h.png" alt="logo"></a></div>
-      <ul class="login-bar">
-        <li><a class="logoIn" href="/registro">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
-        <li><a class="carrito" href="/carrito"> <i class="fas fa-shopping-cart"></i></a></li>
-      </ul>
-      <div class="search">
-        <form action=><input type="text" placeholder="Buscar productos,ofertas.."><button class="lupa"><i
-              class="fas fa-search"></i>
-      </div>
+        <ul class="navbar_responsive">
+            <li><a href="">tienda</a></li>
+            <li><a href="">contacto</a></li>
+            <li><a href="">nosotros</a></li>
+            <li><a href="">acerca de</a></li>
+        </ul>
+        <div class="burger">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">tienda</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">contacto</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">nosotros</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">acerca de</a>
+                      </li>
+                    </ul>
+                    
+                  </div>
+                </div>
+              </nav>
+        </div>
+        <div class="logo"><a href="/"><img src="/images/logo-h.png" alt="logo"></a></div>
+        <ul class="login-bar">
+            <li><a class="logoIn" href="/registro">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
+            <li><a class="carrito" href="/carrito"> <i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+        <div class="search">
+            <form action=><input type="text" placeholder="Buscar productos,ofertas.."><button class="lupa"><i
+                        class="fas fa-search"></i>
+        </div>
     </nav>
-  </header>
+</header>
   <main class="menu">
     
     <!-- form html + css--> 
@@ -101,6 +99,117 @@
     </form>
   </section>
   </main>
+  <footer>
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        <div class="me-5 d-none d-lg-block">
+            <span>Contactanos a traves de nuestras redes sociales: </span>
+        </div>
+
+        <div>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-google"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/ramsesroy/Grupo_11_horaDeMates" class="me-4 text-reset">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+
+    </section>
+
+    <section class="">
+        <div class="container text-center text-md-start mt-5">
+
+            <div class="row mt-3">
+
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        <i class="fas fa-gem me-3"></i>Hora De Mates
+                    </h6>
+                    <p>
+                        Pusimos mucha energía para que en Hora de mates puedas encontrar una fusión entre calidad,
+                        productos y servicios totalmente únicos y diferentes.
+                    </p>
+                </div>
+
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        Productos
+                    </h6>
+                    <p>
+                        <a href="#!" class="text-reset">Mates</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Termos</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Artículos personalizados</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Otros</a>
+                    </p>
+                </div>
+
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        Categorías
+                    </h6>
+                    <p>
+                        <a href="#!" class="text-reset">Tienda</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Nosotros</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Acerca de</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Ayuda</a>
+                    </p>
+                </div>
+
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        Contacto
+                    </h6>
+                    <p><i class="fas fa-home me-3"></i> Quilmes, BA 1712, AR</p>
+                    <p>
+                        <i class="fas fa-envelope me-3"></i>
+                        horaDeMates@hotmail.com
+                    </p>
+                    <p><i class="fas fa-phone me-3"></i> + 0 11 9876 4321</p>
+
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        © 2021 Copyright: HoraDeMates
+        <a class="text-reset fw-bold" href="/">hora-de-mates.com</a>
+    </div>
+
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
 </body>
 
