--- a/Sprint2/public/css/login.css
+++ b/Sprint2/public/css/login.css
@@ -14,6 +14,7 @@
       align-items: center;
       text-align: center;
       padding: 25px 15px;
+      margin-bottom: 100px;
   
   }
   .login .menu .box h2{
@@ -61,15 +62,27 @@
       width: 90%;
       height: 70px;
       align-items: center;
+      margin-bottom: 10px;
       
+  }
+  .login footer{
+      margin-top: 300px;
   }
   
   @media (min-width:361px){
+
+   .login{
+       background:#4c4b4d ;
+   }
+      .login .menu{
+   background-color: #4c4b4d;;
+      }
       
       .login .menu .box{
           margin-top: 50px;
-          width: 50%;
-        
+          
+          width: 40%;
+          background-color: #4c4b4d;
           padding: 25px 15px;
       
       }
@@ -102,7 +115,7 @@
           max-width: 1140px;
           margin: auto;
           margin-top: 50px;
-          width: 50%;
+          width: 40%;
           align-items: center;   
       }
   
