--- a/views/home.html
+++ b/views/home.html
@@ -30,7 +30,7 @@
                       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">home</a>
+                            <a class="nav-link active" aria-current="page" href="/login">login</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">tienda</a>
