--- a/Sprint2/public/css/bootstrap.css
+++ b/Sprint2/public/css/bootstrap.css
@@ -8,5 +8,8 @@
     font-size: 14px;
 }
 
- 
+.navbar-dark .navbar-nav .nav-link {
+    background: rgb(47,47,47);
+    background: radial-gradient(circle, rgba(47,47,47,1) 0%, rgba(0,0,0,1) 99%);
+}
     
