--- a/Sprint2/public/css/home.css
+++ b/Sprint2/public/css/home.css
@@ -17,6 +17,10 @@
     margin: 10px;
     padding-top: 10px;
 }
+/* CARRUSEL*/
+.home .menu .carousel {
+    display: none;
+}
 
 
 /*SECCION PRODUCTOS*/
@@ -75,8 +79,14 @@
     margin-left: 15px;
     margin-bottom: 25px;
 }
+.home .extra-footer .form{
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    margin-left: 15px;
+}
 
-@media (min-width:361px){
+@media (min-width:426px){
     
 .home .menu .carrusel img{
     display: block;
@@ -88,7 +98,7 @@
     justify-content: space-around;
     
  }
-}
+
 .home .producto .imagen img{
     display: flex;
     margin: 15px 15px;
@@ -96,17 +106,43 @@
     height: 200px;
  
 }
+/* CARRUSEL*/
+.home .menu .carousel {
+    display: block;
+}
+
+
+
+/*extra footer*/
+
+.home .extra-footer{
+    width: 90%;
+}
 .home .extra-footer .form{
     display: flex;
-  justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
+  width: 100%;
+  
+}
+.home .extra-footer .form input{ 
+    width: 30%;
+}
+
+
 }
                                         
 @media (min-width:769px){
 
+    .home .extra-footer .form{
+        display: flex;
+        
+    }
  .home .menu .carrusel img{  
 display: block;
  }
-}
+
 .home .producto .imagen img{
   width: 270px;
+}
 }
