--- a/Sprint2/public/css/login.css
+++ b/Sprint2/public/css/login.css
@@ -1,11 +1,11 @@
 .login{
-    background: rgb(3,3,3);
-  background: radial-gradient(circle, rgba(3,3,3,1) 0%, rgba(232,230,225,1) 78%, rgba(255,245,245,1) 100%, rgba(85,87,97,1) 100%, rgba(151,148,154,1) 100%);
-  }
+  background-color: #D3D3D3;
+}
+  
   
   
   .login .menu .box{
-      background-color: #4c4b4d;
+      background-color: #D3D3D3;
       border-style: outset;
       max-width: 1140px;
       margin: auto;
@@ -72,17 +72,17 @@
   @media (min-width:361px){
 
    .login{
-       background:#4c4b4d ;
+       background: #D3D3D3 ;
    }
       .login .menu{
-   background-color: #4c4b4d;;
+   background-color: #D3D3D3;;
       }
       
       .login .menu .box{
           margin-top: 50px;
           
           width: 40%;
-          background-color: #4c4b4d;
+          background-color: #D3D3D3;
           padding: 25px 15px;
       
       }
