--- a/views/carrito.html
+++ b/views/carrito.html
@@ -67,7 +67,7 @@
         <section>
             <h1>Carrito</h1>
             <h3 class="tucarta">Tu Carta</h3>
-            <div class="menu container">
+            <div class="menu-container">
 
                 <div class="Tu-Carta">
                     <p> <img class="imagen1" width="100px"
@@ -96,7 +96,6 @@
                     </div>
                     <p class="quitar">Quitar</p>
                 </div>
-
                 <div class="envio-retiro">
                     <div class="caja-tablet">
                         <p class="negrita caja1"><button class="cajita"></button><a href="">Envío a todo el país</a></p>
@@ -107,6 +106,7 @@
                         <p>Retiro por Sucursal</p>
                     </div>
                 </div>
+
             </div>
             <article>
                 <h3 class="total">Total:$5,000</h3>
