--- a/Sprint2/views/registro.html
+++ b/Sprint2/views/registro.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/b068d6698a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -26,7 +28,7 @@
                       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">home</a>
+                            <a class="nav-link active" aria-current="page" href="/login">login</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">tienda</a>
@@ -41,7 +43,7 @@
                             <a class="nav-link active" aria-current="page" href="#">acerca de</a>
                           </li>
                         </ul>
-
+                        
                       </div>
                     </div>
                   </nav>
@@ -57,19 +59,65 @@
             </div>
         </nav>
     </header>
+    
     <main>
+        <div class="formulario">
+            <form action="/registro" method="">
+
+                <label for="nombre"><p class="pformulario2">Nombre y apellido:</p></label>
+                <div class="inputs"><input type="text" class="primera-barra" name="nombre" required>
+                </div>
+
+                <label for="usuario"><p class="pformulario2"> Nombre de ID:</p></label>
+                <div class="inputs"><input type="text" class="primera-barra" name="usuario" required>
+                </div>
+
+
+                <label for="clave"><p class="pformulario2">Contraseña:</p> </label>
+                <div class="inputs"><input type="password" class="primera-barra" name="clave" required>
+                </div>
+
+
+                <label for="clave"><p class="pformulario2">Confirmar:</p> </label>
+                <div class="inputs"> <input type="password" class="primera-barra" name="clave" required>
+                </div>
+
+
+                <label for="email"><p class="pformulario2"> Email:</p></label>
+                <div class="inputs"><input type="email" class="primera-barra" name="email" required>
+                </div>
+
+                <label for="fecha"><p class="pformulario2"> Fecha de nacimiento:</p></label>
+                <div class="inputs"><input type="date" class="primera-barra" name="fecha" required>
+                </div>
+
+             <div class="reg-bor">   
+            <div class="registrarse">
+            <input type="button" onclick="document.location='./??PHPSESSID=7k4ibok986phf62g3vscriupr7&action=show_create'" class="button" value="Registrarse">
+            </div>
+            </div>
+
+        <div class="espacio-caja">
+            <div class="espacio"></div>
+            <h3 class="o-tambien">O también:</h3>
+            <div class="espacio"></div>
+        </div>
+
+            </form>
+        </div>
+
         <div class="contenedor">
             <h2>Regístrate</h2>
             <div class="caja">
-                <a href=""><p><i class="fab fa-facebook-f"></i>Regístrate con Facebook</p></a>
+                <a href=""><p class="pformulario"><i class="fab fa-facebook-f"></i>Regístrate con Facebook</p></a>
                 
             </div>
             <div class="caja">
-                <a href=""><p><i class="fab fa-google"></i>Regístrate con Google</p></a>
+                <a href=""><p class="pformulario"><i class="fab fa-google"></i>Regístrate con Google</p></a>
                 
             </div>
             <div class="caja">
-                <a href=""><p><i class="far fa-envelope"></i>Regístrate con Email</p></a>
+                <a href=""><p class="pformulario"><i class="far fa-envelope"></i>Regístrate con Email</p></a>
                 
             </div>
 
@@ -182,5 +230,9 @@
         </div>
 
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
