--- a/Sprint2/views/home.html
+++ b/Sprint2/views/home.html
@@ -53,6 +53,7 @@
             <div class="logo"><a href="/"><img src="/images/logo-h.png" alt="logo"></a></div>
             <ul class="login-bar">
                 <li><a class="logoIn" href="/registro">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a class="logoIn" href="/registro">Creá tu cuenta<i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a class="carrito" href="/carrito"> <i class="fas fa-shopping-cart"></i></a></li>
             </ul>
             <div class="search">
