--- a/Sprint2/views/home.html
+++ b/Sprint2/views/home.html
@@ -33,6 +33,9 @@
                             <a class="nav-link active" aria-current="page" href="/login">login</a>
                           </li>
                           <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">registro</a>
+                          </li>
+                          <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">tienda</a>
                           </li>
                           <li class="nav-item">
@@ -40,9 +43,6 @@
                           </li>
                           <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">nosotros</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">acerca de</a>
                           </li>
                         </ul>
                         
@@ -52,8 +52,8 @@
             </div>
             <div class="logo"><a href="/"><img src="/images/logo-h.png" alt="logo"></a></div>
             <ul class="login-bar">
-                <li><a class="logoIn" href="/registro">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a class="logoIn" href="/registro">Creá tu cuenta<i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a class="logoIn" href="/login">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a class="logoIn" href="/registro">Creá tu cuenta<i class="fas fa-user"></i></a></li>
                 <li><a class="carrito" href="/carrito"> <i class="fas fa-shopping-cart"></i></a></li>
             </ul>
             <div class="search">
