--- a/Sprint2/views/login.html
+++ b/Sprint2/views/login.html
@@ -30,7 +30,10 @@
                   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">home</a>
+                        <a class="nav-link active" aria-current="page" href="/login">login</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">registro</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">tienda</a>
@@ -41,9 +44,6 @@
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">nosotros</a>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">acerca de</a>
-                      </li>
                     </ul>
                     
                   </div>
@@ -52,7 +52,8 @@
         </div>
         <div class="logo"><a href="/"><img src="/images/logo-h.png" alt="logo"></a></div>
         <ul class="login-bar">
-            <li><a class="logoIn" href="/registro">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
+            <li><a class="logoIn" href="/login">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
+            <li><a class="logoIn" href="/registro">Creá tu cuenta<i class="fas fa-user"></i></a></li>
             <li><a class="carrito" href="/carrito"> <i class="fas fa-shopping-cart"></i></a></li>
         </ul>
         <div class="search">
@@ -95,7 +96,7 @@
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Recordarme</label>
       </div>
-      <button type="submit" class="btn btn-primary">Enviar</button>
+      <button type="submit" class="btn btn-primary">Ingresar</button>
     </form>
   </section>
   </main>
