--- a/Sprint2/public/css/header.css
+++ b/Sprint2/public/css/header.css
@@ -13,8 +13,8 @@ header a{
 
 header nav{
  display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
 }
 
@@ -40,6 +40,10 @@ header .login-bar .carrito {
 header div.search  {
     display: none;
 }
+header div.search form  {
+    display: none;
+}
+
 
 /*Header -> navbar (Barra de navegación)*/
 
@@ -108,7 +112,7 @@ header .burger{
 }
 header .navbar_responsive{
     display: flex;
-    width: 40%;
+    width: 30%;
     order: 5;
     flex-direction: row;
     justify-content: space-between;
@@ -120,16 +124,19 @@ header .navbar_responsive{
 
 header .navbar_responsive a{
     text-decoration: none;
-    
+    font-size: 21px;
 }
+    
 
 header .login-bar{
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
     order: 20;
-    padding: 18px;
-    
+    padding: 0px;
+    margin-left: 16px;
+    margin-right: 6px;
+    font-family: 'Jomhuria',cursive;
    
 }
 
@@ -138,21 +145,23 @@ header .login-bar li a{
 
 }
 header .login-bar .logoIn{
-    font-size: 11px;
-    padding-top: 15px;
-    margin-left: 25px;
+    font-size: 20px;
+    padding-top: 24px;
+    margin-left: 18px;
     margin-bottom: 10px;
-    
 }
-
+header .login-bar .logoIn i{
+    font-size: 11px;
+}
 header .login-bar .carrito{
     
     margin-bottom: 10px;
     
 }
 header nav .logo img{
-    width:110px ;
-    margin-top: -14px;
+    width: 84px;
+    margin-top: -9px;
+    margin-right: 12px;
 }
 
 header div.search  {
@@ -160,6 +169,12 @@ header div.search  {
     order: 15;
     margin-top: -10px;
 }
+
+header div.search form  {
+    display: block;
+    margin-left: 12px;
+}
+
 
 header div.search input  {
     background: rgb(47,47,47);
@@ -178,46 +193,53 @@ header div.search .lupa {
     font-size: 9px;
     color: gainsboro;
 }
+}
 
-@media (min-width:769px){
-    header .navbar_responsive{
-        display: flex;
-        width: 30%;
-        order: 5;
-        flex-direction: row;
-        justify-content: space-between;
-        font-size: 36px;
-        font-weight: lighter;
-        margin-top: 25px;
-        font-family:'Jomhuria',cursive;
-    }
-    header nav .logo img{
-        width:200px ;
-        margin-left: 25px;
-        margin-top: -15px;
-    }
-    header div.search input  {   
-        width: 250px;
-        font-size: 14px;
-        margin-top: 10px;
-    }
-    header div.search .lupa {
-        font-size: 15px;
-      
-    }
+@media (min-width:769px)
+{ header .navbar_responsive{
+    display: flex;
+    width: 30%;
+    order: 5;
+    flex-direction: row;
+    justify-content: space-between;
+    font-weight: lighter;
+    margin-top: 10px;
+    font-family:'Jomhuria',cursive;
+}
+header .navbar_responsive a{
+    font-size: 33px;
+}
+header nav .logo img{
+    width: 170px;
+    margin-left: 20px;
+    margin-top: -25px;
+}
+header div.search input  {   
+    width: 250px;
+    font-size: 14px;
+    margin-top: 10px;
+}
+header div.search .lupa {
+    font-size: 15px;
+  
+}
+header div.search form {
+    margin-bottom: 12px;
+}
 
-    header .login-bar .logoIn{
-        font-size: 20px;
-       
-        
-    }
+header .login-bar {
+    margin-bottom: 24px;
+}
+header .login-bar .logoIn{
+    font-size: 20px;
+   
     
-    header .login-bar .carrito{
-       font-size: 20px;
-        
-    }
+}
+
+header .login-bar .carrito{
+   font-size: 20px;
     
-    }
+}
 
 }
- 
+
