--- a/Sprint2/views/registro.html
+++ b/Sprint2/views/registro.html
@@ -7,7 +7,6 @@
     <title>Registro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/b068d6698a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body class="registro">
@@ -31,6 +30,9 @@
                             <a class="nav-link active" aria-current="page" href="/login">login</a>
                           </li>
                           <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">registro</a>
+                          </li>
+                          <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">tienda</a>
                           </li>
                           <li class="nav-item">
@@ -38,9 +40,6 @@
                           </li>
                           <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">nosotros</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">acerca de</a>
                           </li>
                         </ul>
                         
@@ -50,7 +49,8 @@
             </div>
             <div class="logo"><a href="/"><img src="/images/logo-h.png" alt="logo"></a></div>
             <ul class="login-bar">
-                <li><a class="logoIn" href="/registro">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a class="logoIn" href="/login">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a class="logoIn" href="/registro">Creá tu cuenta<i class="fas fa-user"></i></a></li>
                 <li><a class="carrito" href="/carrito"> <i class="fas fa-shopping-cart"></i></a></li>
             </ul>
             <div class="search">
@@ -230,7 +230,7 @@
         </div>
 
     </footer>
-
+    <script src="https://kit.fontawesome.com/b068d6698a.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
