--- a/Sprint2/views/carrito.html
+++ b/Sprint2/views/carrito.html
@@ -80,7 +80,7 @@
                         <p class="negrita descripcion">2,500</p>
                     </div>
                 
-                    <p class="quitar">Quitar</p>
+                    <p class="quitar"><a href="">Quitar</a></p>
                 </div>
 
 
@@ -94,16 +94,16 @@
                         <p class="negrita descripcion">Set matero Hawai</p>
                         <p class="descripcion">Cantidad:1</p>
                         <p class="negrita descripcion">2,500</p>
-                    </div>
-                    <p class="quitar">Quitar</p>
+                    </div>         
+                    <p class="quitar"><a href="">Quitar</a></p>
                 </div>
                 <div class="envio-retiro">
                     <div class="caja-tablet">
-                        <p class="negrita caja1"><button class="cajita"></button><a href="">Envío a todo el país</a></p>
+                        <p class="negrita caja1"><input type="radio" name="retiroEnvio" value="Envio"> Envío a todo el país</p>
                         <p>Envío de 4 a 7 días</p>
                     </div>
                     <div class="caja-tablet">
-                        <p class="negrita caja1"><button class="cajita"></button><a href="">Retiro en el local</a></p>
+                        <p class="negrita caja1"><input type="radio" name="retiroEnvio" value="Retiro"> Retiro en el local</p>
                         <p>Retiro por Sucursal</p>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
             <article>
                 <h3 class="total">Total:$5,000</h3>
                 <div class="finalizar-compra">
-                    <p>Finalizar compra</p>
+                    <button type="submit" class="btn btn-dark"> Finalizar compra </button>
                 </div>
             </article>
         </section>
