--- a/Sprint2/views/home.html
+++ b/Sprint2/views/home.html
@@ -311,3 +311,76 @@
 </body>
 
 </html>
+----------------------------------------------------------------------------
+<article class="producto">
+    <div class="imagen">
+        <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/mate2.jpeg" width="200px"> </a>
+    </div>
+    <div class="resumen">
+        <h4 class="descripcion">mate de cuero silver</h4>
+        <p class="precio">$2900</p>
+    </div>
+</article>
+<article class="producto">
+    <div class="imagen">
+        <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/mate3.jpeg" width="200px"> </a>
+    </div>
+    <div class="resumen">
+        <h4 class="descripcion">mate style dashed</h4>
+        <p class="precio">$2500</p>
+    </div>
+</article>
+<article class="producto">
+    <div class="imagen">
+        <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/mate4.jpeg" width="200px"> </a>
+    </div>
+    <div class="resumen">
+        <h4 class="descripcion">mate de acero black</h4>
+        <p class="precio">$2700</p>
+    </div>
+</article> 
+<article class="producto">
+    <div class="imagen">
+        <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/mate-blanco.png" width="200px"> </a>
+    </div>
+    <div class="resumen">
+        <h4 class="descripcion">mate de acero white</h4>
+        <p class="precio">$1999</p>
+    </div>
+</article>
+<article class="producto">
+    <div class="imagen">
+        <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/mate-negro.png" width="200px"> </a>
+    </div>
+    <div class="resumen">
+        <h4 class="descripcion">mate de acero black</h4>
+        <p class="precio">$1999</p>
+    </div>
+</article>
+<article class="producto">
+    <div class="imagen">
+        <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/equipo1.jpeg" width="200px"> </a>
+    </div>
+    <div class="resumen">
+        <h4 class="descripcion">equipo matero green</h4>
+        <p class="precio">$5999</p>
+    </div>
+</article>
+<article class="producto">
+    <div class="imagen">
+        <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/equipo2.jpeg" width="200px"> </a>
+    </div>
+    <div class="resumen">
+        <h4 class="descripcion">equipo matero blue-dark</h4>
+        <p class="precio">$5999</p>
+    </div>
+</article>
+<article class="producto">
+    <div class="imagen">
+        <a href="/detalleDeProducto"><img class="rounded-circle" src="/images/equipo3.jpeg" width="200px"> </a>
+    </div>
+    <div class="resumen">
+        <h4 class="descripcion">equipo matero full-cuero</h4>
+        <p class="precio">$5999</p>
+    </div>
+</article>
