--- a/horaDeMates/views/index.ejs
+++ b/horaDeMates/views/index.ejs
@@ -49,7 +49,7 @@
 
             <article class="producto">
               <div class="imagen">
-                <a href="/products/detalleDeProducto"><img class="rounded-circle" src="/images/<%= producto.image %> "
+                <a href="/products/detalleDeProducto/<%= producto.id %> "><img class="rounded-circle" src="/images/<%= producto.image %> "
                     width="200px"> </a>
               </div>
               <div class="resumen">
