--- a/horaDeMates/public/stylesheets/styles.css
+++ b/horaDeMates/public/stylesheets/styles.css
@@ -7,3 +7,5 @@
 @import url('login.css');
 @import url('registro.css');
 @import url('bootstrap.css');
+@import url('editProducts.css');
+@import url('addProducts.css');
