--- a/horaDeMates/views/partials/footer.ejs
+++ b/horaDeMates/views/partials/footer.ejs
@@ -46,7 +46,7 @@
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
                     <h6 class="text-uppercase fw-bold mb-4">
-                        Productos
+                        Categorías
                     </h6>
                     <p>
                         <a href="#!" class="text-reset">Mates</a>
@@ -65,7 +65,7 @@
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
 
                     <h6 class="text-uppercase fw-bold mb-4">
-                        Categorías
+                        Información
                     </h6>
                     <p>
                         <a href="#!" class="text-reset">Tienda</a>
