--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -4,7 +4,15 @@
             <li><a href="">tienda</a></li>
             <li><a href="">contacto</a></li>
             <li><a href="">nosotros</a></li>
-            <li><a href="">acerca de</a></li>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                ADMIN
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="/admin/addProducts">Agregar Producto</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+              </ul>
+            </div>
         </ul>
         <div class="burger">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
