--- a/sitio/public/stylesheets/addProducts.css
+++ b/sitio/public/stylesheets/addProducts.css
@@ -1,4 +1,7 @@
-
+.addProducts{
+    background: radial-gradient(circle, rgba(47,47,47,1) 0%, rgba(0,0,0,1) 99%);
+  
+}
 .addProducts .formulario{
     background: radial-gradient(circle, rgba(47,47,47,1) 0%, rgba(0,0,0,1) 99%);
     display: flex;
