--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -10,7 +10,7 @@
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a class="dropdown-item" href="/admin/addProducts">Agregar Producto</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="/admin/editProducts">Editar Producto</a></li>
               </ul>
             </div>
         </ul>
