--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -50,8 +50,8 @@
             <li><a class="carrito" href="/products/carrito"> <i class="fas fa-shopping-cart"></i></a></li>
         </ul>
         <div class="search">
-            <form action=><input type="text" placeholder="Buscar productos,ofertas.."><button class="lupa"><i
-                        class="fas fa-search"></i>
+            <form><input type="text" placeholder="Buscar productos,ofertas.."><button class="lupa"><i
+                        class="fas fa-search"></button></i></form>
         </div>
     </nav>
 </header>
