--- a/sitio/views/editProducts.ejs
+++ b/sitio/views/editProducts.ejs
@@ -1,79 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
-    <%- include('./partials/head.ejs') %>
+<html lang="es">
+<%- include('./partials/head.ejs') %>
 
-<body class="editProducts">
-    <%- include('./partials/header.ejs') %>
-    <form method="POST">
-        <div class="formulario">
-         <div class="boxForm">
-             <label for="modelo" class="">Título :</label>
-             <input
-                 class="input-title"
-                 type="text"
-                 name="modelo"
-                 placeholder="Mate de cuero , bolso matero"
-                 id="modelo"
-             />
-         
-         </div>
+    <body class="editProducts">
+        <%- include('./partials/header.ejs') %>
+            <form action="/admin/editProducts/<%= product.id %>?_method=PUT" method="POST">
+                <div class="formulario">
+                    <div class="boxForm">
+                        <label for="title" class="">Título :</label>
+                        <input class="input-title" type="text" name="title" id="nombre"
+                            value="<%= product.title %>">
 
-         <div class="boxForm">
-             <label for="color" class=""></label>Descripción:</label>
-             <input
-                 class="input-form"
-                 type="text"
-                 name="color"
-                 placeholder="Cuero,Sabor,etc."
-                 id="color"
-             />
-             
-         </div>
+                    </div>
 
-             <div class="boxForm">
-                 <label for="category">Categorías:</label>
-                 <select  name="" id="category" value=Categorias>
-                     <option value="category"></option>
-                     <option value="category">Mates</option>
-                     <option value="category">Yerbas</option>
-                     <option value="category">Bolsos Materos</option>
-                     <option value="category">Bombillas</option>
-                     <option value="category">Otros</option>
-                     </select>
-             </div>
+                    <div class="boxForm">
+                        <label for="description" class=""></label>Descripción:</label>
+                        <input class="input-form" type="text" name="description" id="color"
+                            value="<%= product.description %> ">
+
+                    </div>
+
+                    <div class="boxForm">
+                        <label for="category">Categorías:</label>
+                        <select name="category" id="category" value=Categorias>
+                            <option value="mates" <%= product.category === "mates" ? 'selected' : null %>>Mates</option>
+                            <option value="yerbas" <%= product.category === "yerbas" ? 'selected' : null %>>Yerbas</option>
+                            <option value="bolsos" <%= product.category === "bolsos" ? 'selected' : null %>>Bolsos Materos</option>
+                            <option value="bombillas" <%= product.category === "bombillas" ? 'selected' : null %>>Bombillas</option>
+                            <option value="otros" <%= product.category === "otros" ? 'selected' : null %>>Otros</option>
+                        </select>
+                    </div>
 
 
-             <div class="boxForm">
-                 <label for="valor" class="">Precio :</label>
-                 <input
-                 class="input-price"
-                     type="text"
-                     name="valor"
-                     placeholder="Ars$10,Ars$1000,etc.."
-             
-                 />
-                
-             </div>
+                    <div class="boxForm">
+                        <label for="price" class="">Precio :</label>
+                        <input class="input-price" type="text" name="price" value="<%= product.price %> ">
 
-             <div class="boxForm">
-                 <label  class="">Cargar foto :</label>
-                 <input
-                      class="input-form"
-                     type="file"
-                     name="file"
-                     multiple
-                 />
-             </div>
-             <div class="boxForm">
-             <button class="btn btn-dark"  type="submit">Guardar</button>
-         </div>
+                    </div>
 
-         </div> 
- </form>
-     <%- include('./partials/footer.ejs') %>
-         <%- include('./partials/scripts.ejs') %>
-</body>
+                    <div class="boxForm">
+                        <label class="">Cargar foto :</label>
+                        <input class="input-form" type="file" name="file" multiple >
+                    </div>
+                    <div class="boxForm">
+                        <button class="btn btn-dark" type="submit">Guardar</button>
+                    </div>
 
-    
-</body>
+                </div>
+            </form>
+            <%- include('./partials/footer.ejs') %>
+                <%- include('./partials/scripts.ejs') %>
+    </body>
+
+
+    </body>
+
 </html>
